# NEL_api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  initializer.py  main.py  pyproject.toml  sample_footer.json  sample_query.txt  test_api.py  test_download.py  test_init.py
app/: __init__.py  config.py  default_registry.yaml  initializer.py  registry.yaml  resolver.py
app/model_manager/: __init__.py  __main__.py  downloader.py  registry.yaml  resolver.py  toy_registry.yaml
app/models/: loader.py  registry.py  registry.yaml  resolver.py
app/pipeline/: abs_model.py  negation.py  nel.py  ner.py  orchestrator.py
app/src/: data_structures.py  formatter.py  pipelines.py
app/src/format/: __init__.py  base.py  passthrough.py
app/src/negation/: __init__.py
app/src/nel/: __init__.py  biencoder.py  lookup.py
app/src/nel/biencoder/: __init__.py  biencoder.py
app/src/nel/bm25/: __init__.py  bm25.py
app/src/nel/fuzzy_match/: __init__.py  fuzzy_match.py
app/src/nel/lookup/: __init__.py  lookup.py
app/src/ner/: __init__.py  encoder.py  encoder_inference_v1.py  encoder_inference_v2.py  ner.py
app/src/sota/: nel.py  ner.py
app/utils/: download_model.py  model_utils.py  results_postprocessing.py  text_preprocessing.py
